--- a/debian/control
+++ b/debian/control
@@ -11,10 +11,9 @@ Rules-Requires-Root: no
 Package: distiller-update
 Architecture: all
 Depends: ${misc:Depends},
-         ${python3:Depends},
          python3 (>= 3.11),
-         python3-packaging,
-         python3-yaml,
+         python3-venv,
+         python3-dev,
          apt,
          systemd,
          coreutils
