--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [project]
 name = "distiller-update"
-version = "0.1.0"
-description = "Update notification system for Pamir AI Distiller devices"
+version = "0.2.0"
+description = "Simple APT update checker for Pamir AI Distiller devices"
 readme = "README.md"
 requires-python = ">=3.11"
 license = {text = "MIT"}
 authors = [
     {name = "PamirAI Incorporated", email = "support@pamir.ai"}
 ]
-keywords = ["apt", "updates", "notifications", "distiller", "raspberry-pi"]
+keywords = ["apt", "updates", "notifications", "distiller", "dbus"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: No Input/Output (Daemon)",
@@ -21,8 +21,12 @@ classifiers = [
     "Topic :: System :: Systems Administration",
 ]
 dependencies = [
-    "pyyaml>=6.0",
-    "packaging>=23.0",
+    "pydantic>=2.10.0",
+    "dbus-fast>=2.24.0",
+    "typer>=0.15.0",
+    "aiofiles>=24.1.0",
+    "structlog>=25.0.0",
+    "aiohttp>=3.9.0",
 ]
 
 [project.scripts]
@@ -34,11 +38,12 @@ build-backend = "hatchling.build"
 
 [tool.uv]
 dev-dependencies = [
-    "ruff>=0.5.0",
-    "pytest>=8.0.0",
-    "pytest-cov>=4.0.0",
-    "mypy>=1.10.0",
-    "types-PyYAML>=6.0",
+    "ruff>=0.8.0",
+    "pytest>=8.3.0",
+    "pytest-asyncio>=0.24.0",
+    "pytest-cov>=6.0.0",
+    "mypy>=1.14.0",
+    "types-aiofiles>=24.1.0",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -56,3 +61,24 @@ include = [
     "/ruff.toml",
     "/build-deb.sh",
 ]
+
+[tool.mypy]
+python_version = "3.11"
+strict = true
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_any_generics = true
+check_untyped_defs = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+follow_imports = "normal"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["tests"]
+python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
