--- a/ruff.toml
+++ b/ruff.toml
@@ -21,11 +21,14 @@ ignore = [
     "E501",   # line too long (handled by formatter)
     "T201",   # print found (we need it for CLI)
     "S603",   # subprocess without shell=True is safe
+    "S110",   # try-except-pass is fine for optional operations
+    "S112",   # try-except-continue is fine for config loading
 ]
 
 [lint.per-file-ignores]
 "tests/*" = ["S101", "ANN"]  # Allow assert and no type annotations in tests
 "__main__.py" = ["T201"]      # Allow print in CLI
+"src/distiller_update/notifiers/motd.py" = ["S103"]  # MOTD scripts must be executable
 
 [format]
 quote-style = "double"
