--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "distiller-update"
-version = "0.2.0"
-description = "Simple APT update checker for Pamir AI Distiller devices"
+version = "2.0.0"
+description = "APT update checker for Pamir AI Distiller devices"
 readme = "README.md"
 requires-python = ">=3.11"
 license = {text = "MIT"}
@@ -24,9 +24,7 @@ dependencies = [
     "pydantic>=2.10.0",
     "dbus-fast>=2.24.0",
     "typer>=0.15.0",
-    "aiofiles>=24.1.0",
     "structlog>=25.0.0",
-    "aiohttp>=3.9.0",
 ]
 
 [project.scripts]
@@ -40,10 +38,8 @@ build-backend = "hatchling.build"
 dev-dependencies = [
     "ruff>=0.8.0",
     "pytest>=8.3.0",
-    "pytest-asyncio>=0.24.0",
     "pytest-cov>=6.0.0",
     "mypy>=1.14.0",
-    "types-aiofiles>=24.1.0",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -77,7 +73,6 @@ warn_no_return = true
 follow_imports = "normal"
 
 [tool.pytest.ini_options]
-asyncio_mode = "auto"
 testpaths = ["tests"]
 python_files = "test_*.py"
 python_classes = "Test*"
