feat: visual improvements to cli
Change-Id: Idc1e4390514b3b779be59e1671504cdb8caed9d8
Signed-off-by: utsavbalar1231 <utsavbalar1231@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "dbus-fast>=2.24.0",
     "typer>=0.15.0",
     "structlog>=25.0.0",
+    "rich>=13.0.0",
 ]
 
 [project.scripts]
