--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,8 @@ distiller-update = "distiller_update.__main__:main"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "ruff>=0.8.0",
     "pytest>=8.3.0",
     "pytest-cov>=6.0.0",
