feat(config): expand default bundle with kernel drivers and telemetry
Add DKMS kernel modules (eink, sam, soundcard) and telemetry service
to default package bundle. Update package names from distiller-cm5-*
to distiller-* to match current naming conventions.

Change-Id: 1759495278
Signed-off-by: utsavbalar1231 <utsavbalar1231@gmail.com>

--- a/config/config.toml
+++ b/config/config.toml
@@ -31,4 +31,4 @@ allow_new_packages = true
 
 # Bundle settings
 [bundle.default]
-packages = ["claude-code-web-manager", "distiller-cm5-sdk", "distiller-cm5-services", "distiller-cc", "distiller-update"]
+packages = ["claude-code-web-manager", "distiller-sdk", "distiller-services", "distiller-cc", "distiller-update", "distiller-telemetry", "pamir-ai-eink-dkms", "pamir-ai-sam-dkms", "pamir-ai-soundcard-dkms"]
