--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,13 @@
 Source: distiller-update
 Section: admin
 Priority: optional
-Maintainer: PamirAI Incorporated <support@pamir.ai>
+Maintainer: PamirAI Incorporated <founders@pamir.ai>
 Build-Depends: debhelper-compat (= 13),
                python3-all (>= 3.11)
-Standards-Version: 4.6.2
+Standards-Version: 4.7.0
 Homepage: https://github.com/pamir-ai-pkgs/distiller-update
+Vcs-Git: https://github.com/pamir-ai-pkgs/distiller-update.git
+Vcs-Browser: https://github.com/pamir-ai-pkgs/distiller-update
 Rules-Requires-Root: no
 
 Package: distiller-update
