--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,25 @@
 #!/usr/bin/make -f
 
+export PYBUILD_NAME=distiller-update
+
 %:
 	dh $@
+
+override_dh_auto_build:
+	dh_auto_build
+	# Generate man page from --help output
+	mkdir -p debian
+	chmod +x debian/distiller-update-help
+	help2man \
+		--name='APT update checker for Pamir AI Distiller devices' \
+		--section=1 \
+		--version-string="$$(grep '^version' pyproject.toml | head -1 | cut -d'\"' -f2)" \
+		--no-info \
+		--include=debian/distiller-update.help2man.include \
+		--output=debian/distiller-update.1 \
+		debian/distiller-update-help || echo "Warning: Could not generate man page"
+	# Fix program name in generated man page
+	sed -i 's/DISTILLER-UPDATE-HELP/DISTILLER-UPDATE/; s/distiller-update-help/distiller-update/g' debian/distiller-update.1 || true
 
 override_dh_install:
 	dh_install
