refactor(debian): integrate proper debhelper integration
Switch from manual systemd unit installation to dh_installsystemd for
proper debhelper integration. Add machine-readable copyright file and
lintian overrides for policy exceptions. Expand package description
with detailed feature list.

- Use dh_installsystemd instead of manual systemd management
- Add debian/copyright in DEP-5 format
- Add lintian overrides for /opt installation and privilege changes
- Enhance package description with comprehensive feature list
- Remove redundant coreutils dependency

Change-Id: I292ad048edfff6227da5b15872608de3e7e92d91
Signed-off-by: utsavbalar1231 <utsavbalar1231@gmail.com>

--- a/debian/rules
+++ b/debian/rules
@@ -26,7 +26,7 @@ override_dh_install:
 	mv debian/distiller-update/usr/bin/distiller-update-wrapper debian/distiller-update/usr/bin/distiller-update
 
 override_dh_installsystemd:
-	# Skip dh_installsystemd since we're installing to /etc/systemd/system manually
+	dh_installsystemd --name=distiller-update
 
 override_dh_fixperms:
 	dh_fixperms
