--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,19 @@ Depends: ${misc:Depends},
          python3-venv,
          python3-dev,
          apt,
-         systemd,
-         coreutils
+         systemd
 Suggests: update-motd
 Description: Update notification system for Distiller by Pamir-AI
+ Automated APT update checker with systemd integration for Distiller
+ edge devices.
+ .
+ Features:
+  - Automatic detection of available package updates
+  - System integration via systemd timer (daily checks)
+  - MOTD (Message of the Day) notifications for SSH sessions
+  - D-Bus notification support for desktop environments
+  - CLI for manual update checking and package management
+  - Configurable update policies and notification preferences
+ .
+ This package provides a user-friendly way to stay informed about system updates
+ on embedded Distiller devices running Debian/Ubuntu-based distributions.
