feat(config): add selective APT source updating for faster checks
Add apt_source_file configuration option to enable updating only the
pamir.ai repository instead of all APT sources. This optimization
reduces update check time from ~9-10 seconds to ~1-2 seconds when
configured.

Implementation:
- Add apt_source_file field to Config model (optional, defaults to None)
- Modify _update_cache() to pass Dir::Etc::sourcelist and
  Dir::Etc::sourceparts APT options when apt_source_file is set
- Update default config.toml with pamir-ai.list source file
- Document configuration option and performance benefit in README.md

When apt_source_file is set to "sources.list.d/pamir-ai.list", apt-get
update only processes that single source file. Setting to None restores
default behavior of updating all sources for backwards compatibility.

Change-Id: I068be9ed2b4ee971d9861463ee4444cb404a955a
Signed-off-by: utsavbalar1231 <utsavbalar1231@gmail.com>

--- a/config/config.toml
+++ b/config/config.toml
@@ -24,6 +24,11 @@ apt_list_timeout = 60       # Timeout for apt list --upgradable
 apt_query_timeout = 10      # Timeout for quick apt queries
 apt_install_timeout = 1800  # Timeout for package installation
 
+# APT update optimization
+# Only update the pamir.ai repository for faster checks (~1-2s instead of ~9-10s)
+# Comment out to update all repositories
+apt_source_file = "sources.list.d/pamir-ai.list"
+
 # Policy settings
 [policy]
 restrict_prefixes = ["pamir-ai-", "distiller-", "claude-code-"]
