feat(led): add LED status indicators for package updates
Integrate hardware LED feedback during package updates using
distiller-sdk LED API. Provides visual status indication for update
operations with kernel-driven fade animations.

Implementation:
- Add LEDController class with graceful SDK/hardware degradation
- Blue fade animation during package installation (continuous)
- Green fade animation on successful update (10 seconds, then off)
- LEDs turn off on error or when idle
- Dynamic import of distiller-sdk to avoid hard dependency
- Context manager support for automatic cleanup

The LED controller operates independently of update logic - LED
failures are logged but do not interrupt update operations. LED
animations run in kernel space via distiller-sdk, providing smooth
fade effects without blocking Python execution (except success state).

Change-Id: Ie2f3ebc2d487660c8c744e0994a9ae5a1502c936
Signed-off-by: utsavbalar1231 <utsavbalar1231@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,8 @@ Depends: ${misc:Depends},
          python3 (>= 3.11),
          uv,
          apt,
-         systemd
+         systemd,
+         distiller-sdk (>= 3.0.0)
 Suggests: update-motd
 Description: Update notification system for Distiller by Pamir-AI
  Automated APT update checker with systemd integration for Distiller
@@ -28,6 +29,7 @@ Description: Update notification system for Distiller by Pamir-AI
   - System integration via systemd timer (daily checks)
   - MOTD (Message of the Day) notifications for SSH sessions
   - D-Bus notification support for desktop environments
+  - LED status indicators (blue fade during update, green fade on success)
   - CLI for manual update checking and package management
   - Configurable update policies and notification preferences
  .
