chore: untrack auto-generated man page
Change-Id: I990e355bbc6f745cf16cc5ae6a9925925b382dbe
Signed-off-by: utsavbalar1231 <utsavbalar1231@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ debian/*.substvars
 debian/files
 debian/debhelper-build-stamp
 debian/*.postrm.debhelper
+debian/distiller-update.1
 *.deb
 *.buildinfo
 *.changes
