build: modernize build system with gbp workflow and hardening
Adopt git-buildpackage (gbp) workflow and strengthen build security:

Justfile changes:
- Switch default architecture from "all" to "arm64" for target platform
- Add architecture parameter support to debuild command
- Replace manual changelog (dch -i) with gbp dch for automated versioning
- Remove manual man page generation recipe (handled by build system)
- Reorganize recipes for better logical grouping

debian/rules changes:
- Enable all build hardening options (hardening=+all)
- Prevent Python bytecode generation during build (PYTHONDONTWRITEBYTECODE)
- Remove redundant PYBUILD_NAME export

This aligns with Debian best practices for reproducible builds and
security hardening while adopting the git-buildpackage workflow used
across the pamir-ai package ecosystem.

Change-Id: I8d0005477e0c0866535cbfea8d7f4200b2426e71

--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,7 @@
 #!/usr/bin/make -f
 
-export PYBUILD_NAME=distiller-update
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+export PYTHONDONTWRITEBYTECODE = 1
 
 %:
 	dh $@
